--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "files": [
     "android/src/main/",
     "android/build.gradle",
-    "dist/"
+    "dist/",
+    "src/",
+    "tsconfig.json"
   ],
   "author": "Yuku Kotani",
   "license": "Apache-2.0",
@@ -37,7 +39,8 @@
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js --bundleConfigAsCjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postinstall": "npx tsc"
   },
   "devDependencies": {
     "@capacitor/android": "^5.0.0",
