Added tsc to build script

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build",
-    "postinstall": "npm run clean && rollup -c rollup.config.js --bundleConfigAsCjs"
+    "postinstall": "npm run clean && tsc && rollup -c rollup.config.js --bundleConfigAsCjs"
   },
   "devDependencies": {
     "@capacitor/android": "^5.0.0",
