--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js --bundleConfigAsCjs",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build",
-    "postinstall": "npm run clean && tsc && rollup -c rollup.config.js --bundleConfigAsCjs"
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@capacitor/android": "^5.0.0",
